--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <h1>todos</h1>
         <header>
-            <i class="fas fa-angle-down"></i>
+            <i class="fas fa-angle-down" id="allOption" onclick="allOption()"></i>
             <input
                 type="text"
                 id="txt_todo"
@@ -29,9 +29,9 @@
         <footer class="footer-bar" id="footer-navbar">
             <p><span id="items__left">0 </span>items left</p>
             <ul>
-                <li><button>All</button></li>
-                <li><button>Active</button></li>
-                <li><button>Completed</button></li>
+                <li><button class="btn active" onclick="showAll()">All</button></li>
+                <li><button class="btn" onclick="active()">Active</button></li>
+                <li><button class="btn" onclick="completed()">Completed</button></li>
             </ul>
             <button class="btn__clear" onclick="delAll()">Clear completed</button>
         </footer>
