update item - fix filter

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <footer class="footer-bar" id="footer-navbar">
             <p><span id="items__left">0 </span>items left</p>
             <ul>
-                <li><button class="btn active" onclick="showAll()">All</button></li>
-                <li><button class="btn" onclick="active()">Active</button></li>
-                <li><button class="btn" onclick="completed()">Completed</button></li>
+                <li><button class="btn active" onclick="filterOption('all')">All</button></li>
+                <li><button class="btn" onclick="filterOption('active')">Active</button></li>
+                <li><button class="btn" onclick="filterOption('completed')">Completed</button></li>
             </ul>
             <button class="btn__clear" onclick="delAll()">Clear completed</button>
         </footer>
