fixed updating an item - basic styling layout

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <div class="container">
             <ul id="container__list"></ul>
         </div>
-        <footer class="footer-bar" id="footer-navbar">
+        <footer class="footer-bar">
             <p><span id="items__left">0 </span>items left</p>
             <ul>
                 <li><button class="btn active" onclick="filterOption('all')">All</button></li>
-                <li><button class="btn" onclick="filterOption('active')">Active</button></li>
+                <li><button class="btn mid" onclick="filterOption('active')">Active</button></li>
                 <li><button class="btn" onclick="filterOption('completed')">Completed</button></li>
             </ul>
             <button class="btn__clear" onclick="delAll()">Clear completed</button>
