css for all components

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             </ul>
             <button class="btn__clear" onclick="delAll()">Clear completed</button>
         </footer>
+        <div id="line__ending">
+            <div class="line"></div>
+            <div class="line line__two"></div>
+        </div>
         <footer class="instruction">
             <p>
                 Double-click to edit a todo
