--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
             crossorigin="anonymous"
         />
+        <title>TodoJS</title>
         <link rel="stylesheet" href="styles.css" />
         <script src="todoFunction.js"></script>
     </head>
